added `CutCommandValidator` - validates the input command